<resources>
    <string name="app_name">Cocktails</string>
    <string name="cocktails">Cocktails</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="todo">TODO</string>
    <string name="email">email</string>
    <string name="example_mail_com">example@mail.com</string>
    <string name="gordana_ilic">Gordana Ilic</string>
    <string name="full_name">Full name</string>
    <string name="password">password</string>
    <string name="example123">example123</string>
    <string name="logout">Logout</string>
    <string name="ime_koktela">Ime koktela</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="failed_fetch">Failed to fetch cocktails</string>
    <string name="error_loading">Error loading data</string>
    <string name="search_by_name">Search by name</string>
    <string name="nothing_to_show_please_search_something_else">Nothing to show please search something else</string>
    <string name="alcoholic">Alcoholic</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="filter_cocktails_by">Filter cocktails by</string>
    <string name="acoholic_or_not">Acoholic or not</string>
    <string name="category">Category</string>
    <string name="glass_used">Glass used</string>
    <string name="ingredient">Ingredient</string>
    <string name="first_letter">First letter</string>
    <string name="filter_alcoholic">Filter cocktails by Acoholic or not</string>
    <string name="filter_category">Filter cocktails by Category</string>
    <string name="filter_glass">Filter cocktails by Glass used</string>
    <string name="filter_ingredient">Filter cocktails by Ingredient</string>
    <string name="filter_error">Error loading data: %1$s</string>
    <string name="register">Register</string>
    <string name="name">name</string>
    <string name="or">or</string>
    <string name="login">Login</string>
    <string name="invalid_name">Invalid name</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Invalid password</string>
    <string name="unique_email">Email address is already registered</string>
    <string name="incorrect_email_or_password">Incorrect email or password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cocktail_image">Cocktail image</string>
    <string name="cocktail_name">Cocktail name</string>
    <string name="icon_alcoholic">Icon alcoholic</string>
    <string name="icon_category">Icon category</string>
    <string name="icon_glass">Icon glass</string>
    <string name="instructions">Instructions</string>
    <string name="ingredients">Ingredients</string>


</resources>